Fix bags: now user cannot see and do any action with other orders

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -182,6 +182,11 @@
                         <artifactId>kotlin-maven-serialization</artifactId>
                         <version>${kotlin_version}</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-serialization</artifactId>
+                        <version>${kotlin_version}</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
